--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,8 @@
     <title>Popspots Challenge</title>
   </head>
   <body>
+    <!-- TODO: this needs to be moved to the backend -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0MKsli6YghAjzOVmJy_AaFEwhDTfCC1g&libraries=places"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
